# rust-advent-of-code

./: .gitignore  README.md
1-sonar-sweep/src/: main.rs
2-dive/src/: instructions.rs  main.rs  position.rs
2.2-dive-part-two/: Cargo.toml
2.2-dive-part-two/src/: main.rs
3-binary-diagnostic/: Cargo.toml  README.md
3-binary-diagnostic/src/: main.rs
3.1-binary-diagnostic/: README.md
3.2-binary-diagnostic/: Cargo.toml  README.md
3.2-binary-diagnostic/src/: 3  main.rs
3v2-binary-diagnostic/src/: main.rs
4.1-giant-squid/: Cargo.toml  README.md
4.1-giant-squid/src/: main.rs
