[package]
name = "giant-squid-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.testing]
inherits = "dev"
opt-level = 1

[profile.pre-release]
inherits = "dev"
lto = "fat"
opt-level = 2

[profile.release]
opt-level = 3

